# HEN-V

./: .clangd  .gitignore  CMakeLists.txt  README.md  build.bat  build.sh  building.md  commands.md  go.work
chan/: CMakeLists.txt
chan/include/: queue.h
chan/src/: queue.c
daemon/: CMakeLists.txt  app.go  auth.go  buffer.go  dynlib.go  elf.go  elfldr.go  go.mod  henv.go  ipc.go  kernel.go  klog.go  main  main.go  memory.go  msg.go  nid.go  offsets.go  payload.go  proc.go  procmon.go  ptrace.go  resolver.go  rtld.go  service.go  ucred.go
daemon/source/: backtrace.c  event.c  event.h  henv.c  ipc.c  ipc.h  main.c  msg.c  msg.h  notification.c  notification.h  offsets.c  pool.c  pool.h  set.h  thread.h
daemon_old/source/: backtrace.h  event.c  event.h  henv.h  ipc.h  main.c  msg.c  notification.c  notification.h  pool.c  start.c
henv/: app.go  appmessagetype_string.go  auth.go  buffer.go  dynlib.go  elf.go  elfldr.go  go.mod  henv.go  ipc.go  kernel.go  klog.go  memory.go  msg.go  msghandler.go  nid.go  offsets.go  payload.go  proc.go  procinfo.go  ptrace.go  resolver.go  rtld.go  service.go  spawn.go  ucred.go
include/: assert.h  stdlib.h  threads.h
include/sys/: cdefs.h
shared/: CMakeLists.txt
shared/include/: auth.h  elfldr.h  module.h  offsets.h  rtld.h  tracer.h
shared/source/: elfldr.c  faulthandler.c  jailbreak.c  memory.c  module.c  ucred.c
shellcode/: rfork_thread.c  sighandler.c
spawner/: CMakeLists.txt  linker.x
spawner/source/: app.c  app.h  daemon.c  elfldr.c  elfldr.h  faulthandler.h  jailbreak.h  kernel_helpers.c  libs.h  main.c  memory.h  offsets.c  proc.h  rtld.c  shellcode.c  shellcode.h  start.c  tracer.c  tracer.h  ucred.h
util/: CMakeLists.txt
util/source/: cmd.c  crt0.c  ftp.c  kernel_helpers.c  klog.c  krw_server.c  log.h  main.c  memory.h  offsets.c  tcp.c  tcp.h
